syntax = "proto3";

package loadbalancer;

option go_package = "leba/internal/loadbalancer/proto";

service LoadBalancer {
  rpc AddBackend(BackendRequest) returns (BackendResponse);
  rpc RemoveBackend(RemoveBackendRequest) returns (BackendResponse);
  rpc ListBackends(ListBackendsRequest) returns (ListBackendsResponse);
}

message BackendRequest {
  string address = 1;
  string protocol = 2;
  int32 port = 3;
  int32 weight = 4;
  int32 max_open_connections = 5;
  int32 max_idle_connections = 6;
  int32 conn_max_lifetime = 7;
}

message BackendResponse {
  string message = 1;
}

message RemoveBackendRequest {
  string address = 1;
}

message ListBackendsRequest {}

message ListBackendsResponse {
  repeated BackendInfo backends = 1;
}

message BackendInfo {
  string address = 1;
  string protocol = 2;
  int32 port = 3;
  int32 weight = 4;
  int32 max_open_connections = 5;
  int32 max_idle_connections = 6;
  int32 conn_max_lifetime = 7;
  bool health = 8;
}

